--- a/login-form-17/index.html
+++ b/login-form-17/index.html
@@ -17,8 +17,10 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
-					<img src="../static/images/benjamin_mkapa_logo.jpeg">
-					<h2 class="heading-section">Benjamin Mkapa Hospital Portal</h2>
+					<a href="../index.html" style="text-decoration: none; color: inherit;">
+						<img src="../static/images/benjamin_mkapa_logo.jpeg">
+						<h2 class="heading-section">Benjamin Mkapa Hospital Portal</h2>	
+					</a>
 				</div>
 			</div>
 			<div class="row justify-content-center">
