--- a/patient_request.html
+++ b/patient_request.html
@@ -18,9 +18,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= // No I18N
 })(window,document,'script','dataLayer', "");
 }
 }  catch(e){
-}</script><!-- End Google Tag Manager --></head><head><meta property="og:image" content="https://static.zohocdn.com/forms/images/formsicon.9f2e4a123b5b37ecd1e026b34f590968.png"/>
-<link rel="apple-touch-icon" href="https://static.zohocdn.com/forms/images/formsicon.9f2e4a123b5b37ecd1e026b34f590968.png"/>
-<link href="https://static.zohocdn.com/forms/images/favicon.f337ba4df49f92f0a9af92e5d6e998bf.ico" rel="shortcut icon"><title>Zoho Forms</title>
+}</script><!-- End Google Tag Manager --></head><head>
+<meta property="og:image" content="../static/images/benjamin_mkapa_logo.jpeg"/>
+<link rel="apple-touch-icon" href="../static/images/benjamin_mkapa_logo.jpeg"/>
+<link href="../static/images/benjamin_mkapa_logo.jpeg" rel="shortcut icon"><title>Applicant Request - BMH</title>
 
 
 
@@ -307,7 +308,7 @@ ZFLive.isPublicFormAccess = false;
                     <div class="bg-brightRed w-8 xs:w-9 h-1.5 sm:w-11 sm:h-2 rounded-20"></div>
                     <div class="bg-brightRed w-5 xs:w-6 sm:w-7 mt-1.5 h-1.5 sm:h-2 rounded-20"></div>
                 </button>
-                <div class="hidden xl:flex flex-col flex-grow" style="padding-left: 790px;">
+                <div class="hidden xl:flex flex-col flex-grow justify-end items-end">
                     <div class="flex justify-between -ms-32 ps-32 text-base font-bold text-black3 bg-gray8 items-center pe-6 2xl:pe-10 h-2/5">
                         <div class="flex"></div><div class="flex bg-white border border-gray11 py-0.5 items-center">
                             <span>
