--- a/index_logged_in.html
+++ b/index_logged_in.html
@@ -47,7 +47,7 @@
                     <div class="bg-brightRed w-8 xs:w-9 h-1.5 sm:w-11 sm:h-2 rounded-20"></div>
                     <div class="bg-brightRed w-5 xs:w-6 sm:w-7 mt-1.5 h-1.5 sm:h-2 rounded-20"></div>
                 </button>
-                <div class="hidden xl:flex flex-col flex-grow" style="padding-left: 790px;">
+                <div class="hidden xl:flex flex-col flex-grow justify-end items-end">
                     <div class="flex justify-between -ms-32 ps-32 text-base font-bold text-black3 bg-gray8 items-center pe-6 2xl:pe-10 h-2/5">
                         <div class="flex"></div><div class="flex bg-white border border-gray11 py-0.5 items-center">
                             <span>
